packagelon com.twittelonr.cr_mixelonr.similarity_elonnginelon

import com.twittelonr.cr_mixelonr.config.SimClustelonrsANNConfig
import com.twittelonr.cr_mixelonr.modelonl.SimilarityelonnginelonInfo
import com.twittelonr.cr_mixelonr.modelonl.TwelonelontWithScorelon
import com.twittelonr.cr_mixelonr.thriftscala.SimilarityelonnginelonTypelon
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.frigatelon.common.util.StatsUtil
import com.twittelonr.simclustelonrs_v2.thriftscala.elonmbelonddingTypelon
import com.twittelonr.simclustelonrs_v2.thriftscala.IntelonrnalId
import com.twittelonr.simclustelonrs_v2.thriftscala.ModelonlVelonrsion
import com.twittelonr.simclustelonrs_v2.thriftscala.SimClustelonrselonmbelonddingId
import com.twittelonr.simclustelonrsann.thriftscala.SimClustelonrsANNSelonrvicelon
import com.twittelonr.simclustelonrsann.thriftscala.{Quelonry => SimClustelonrsANNQuelonry}
import com.twittelonr.storelonhaus.RelonadablelonStorelon
import com.twittelonr.timelonlinelons.configapi
import com.twittelonr.util.Futurelon
import javax.injelonct.Singlelonton
import com.twittelonr.cr_mixelonr.elonxcelonption.InvalidSANNConfigelonxcelonption
import com.twittelonr.relonlelonvancelon_platform.simclustelonrsann.multiclustelonr.SelonrvicelonNamelonMappelonr

@Singlelonton
caselon class SimClustelonrsANNSimilarityelonnginelon(
  simClustelonrsANNSelonrvicelonNamelonToClielonntMappelonr: Map[String, SimClustelonrsANNSelonrvicelon.MelonthodPelonrelonndpoint],
  statsReloncelonivelonr: StatsReloncelonivelonr)
    elonxtelonnds RelonadablelonStorelon[
      SimClustelonrsANNSimilarityelonnginelon.Quelonry,
      Selonq[TwelonelontWithScorelon]
    ] {

  privatelon val namelon: String = this.gelontClass.gelontSimplelonNamelon
  privatelon val stats = statsReloncelonivelonr.scopelon(namelon)
  privatelon val felontchCandidatelonsStat = stats.scopelon("felontchCandidatelons")

  privatelon delonf gelontSimClustelonrsANNSelonrvicelon(
    quelonry: SimClustelonrsANNQuelonry
  ): Option[SimClustelonrsANNSelonrvicelon.MelonthodPelonrelonndpoint] = {
    SelonrvicelonNamelonMappelonr
      .gelontSelonrvicelonNamelon(
        quelonry.sourcelonelonmbelonddingId.modelonlVelonrsion,
        quelonry.config.candidatelonelonmbelonddingTypelon).flatMap(selonrvicelonNamelon =>
        simClustelonrsANNSelonrvicelonNamelonToClielonntMappelonr.gelont(selonrvicelonNamelon))
  }

  ovelonrridelon delonf gelont(
    quelonry: SimClustelonrsANNSimilarityelonnginelon.Quelonry
  ): Futurelon[Option[Selonq[TwelonelontWithScorelon]]] = {
    StatsUtil.trackOptionItelonmsStats(felontchCandidatelonsStat) {

      gelontSimClustelonrsANNSelonrvicelon(quelonry.simClustelonrsANNQuelonry) match {
        caselon Somelon(simClustelonrsANNSelonrvicelon) =>
          simClustelonrsANNSelonrvicelon.gelontTwelonelontCandidatelons(quelonry.simClustelonrsANNQuelonry).map {
            simClustelonrsANNTwelonelontCandidatelons =>
              val twelonelontWithScorelons = simClustelonrsANNTwelonelontCandidatelons.map { candidatelon =>
                TwelonelontWithScorelon(candidatelon.twelonelontId, candidatelon.scorelon)
              }
              Somelon(twelonelontWithScorelons)
          }
        caselon Nonelon =>
          throw InvalidSANNConfigelonxcelonption(
            "No SANN Clustelonr configurelond to selonrvelon this quelonry, chelonck CandidatelonelonmbelonddingTypelon and ModelonlVelonrsion")
      }
    }
  }
}

objelonct SimClustelonrsANNSimilarityelonnginelon {
  caselon class Quelonry(
    simClustelonrsANNQuelonry: SimClustelonrsANNQuelonry,
    simClustelonrsANNConfigId: String)

  delonf toSimilarityelonnginelonInfo(
    quelonry: elonnginelonQuelonry[Quelonry],
    scorelon: Doublelon
  ): SimilarityelonnginelonInfo = {
    SimilarityelonnginelonInfo(
      similarityelonnginelonTypelon = SimilarityelonnginelonTypelon.SimClustelonrsANN,
      modelonlId = Somelon(
        s"SimClustelonrsANN_${quelonry.storelonQuelonry.simClustelonrsANNQuelonry.sourcelonelonmbelonddingId.elonmbelonddingTypelon.toString}_" +
          s"${quelonry.storelonQuelonry.simClustelonrsANNQuelonry.sourcelonelonmbelonddingId.modelonlVelonrsion.toString}_" +
          s"${quelonry.storelonQuelonry.simClustelonrsANNConfigId}"),
      scorelon = Somelon(scorelon)
    )
  }

  delonf fromParams(
    intelonrnalId: IntelonrnalId,
    elonmbelonddingTypelon: elonmbelonddingTypelon,
    modelonlVelonrsion: ModelonlVelonrsion,
    simClustelonrsANNConfigId: String,
    params: configapi.Params,
  ): elonnginelonQuelonry[Quelonry] = {

    // SimClustelonrs elonmbelonddingId and ANNConfig
    val simClustelonrselonmbelonddingId =
      SimClustelonrselonmbelonddingId(elonmbelonddingTypelon, modelonlVelonrsion, intelonrnalId)
    val simClustelonrsANNConfig =
      SimClustelonrsANNConfig
        .gelontConfig(elonmbelonddingTypelon.toString, modelonlVelonrsion.toString, simClustelonrsANNConfigId)

    elonnginelonQuelonry(
      Quelonry(
        SimClustelonrsANNQuelonry(
          sourcelonelonmbelonddingId = simClustelonrselonmbelonddingId,
          config = simClustelonrsANNConfig.toSANNConfigThrift
        ),
        simClustelonrsANNConfigId
      ),
      params
    )
  }

}
