packagelon com.twittelonr.simclustelonrsann.candidatelon_sourcelon

import com.twittelonr.simclustelonrs_v2.common.ClustelonrId
import com.twittelonr.simclustelonrs_v2.common.SimClustelonrselonmbelondding
import com.twittelonr.simclustelonrs_v2.common.TwelonelontId
import com.twittelonr.simclustelonrs_v2.thriftscala.IntelonrnalId
import com.twittelonr.simclustelonrs_v2.thriftscala.SimClustelonrselonmbelonddingId
import com.twittelonr.simclustelonrsann.thriftscala.ScoringAlgorithm
import com.twittelonr.simclustelonrsann.thriftscala.SimClustelonrsANNConfig
import com.twittelonr.snowflakelon.id.SnowflakelonId
import com.twittelonr.util.Duration
import com.twittelonr.util.Timelon
import scala.collelonction.mutablelon

/**
 * This storelon looks for twelonelonts whoselon similarity is closelon to a Sourcelon SimClustelonrselonmbelonddingId.
 *
 * Approximatelon cosinelon similarity is thelon corelon algorithm to drivelon this storelon.
 *
 * Stelonp 1 - 4 arelon in "felontchCandidatelons" melonthod.
 * 1. Relontrielonvelon thelon SimClustelonrs elonmbelondding by thelon SimClustelonrselonmbelonddingId
 * 2. Felontch top N clustelonrs' top twelonelonts from thelon clustelonrTwelonelontCandidatelonsStorelon (TopTwelonelontsPelonrClustelonr indelonx).
 * 3. Calculatelon all thelon twelonelont candidatelons' dot-product or approximatelon cosinelon similarity to sourcelon twelonelonts.
 * 4. Takelon top M twelonelont candidatelons by thelon stelonp 3's scorelon
 */
trait ApproximatelonCosinelonSimilarity {
  typelon ScorelondTwelonelont = (Long, Doublelon)
  delonf apply(
    sourcelonelonmbelondding: SimClustelonrselonmbelondding,
    sourcelonelonmbelonddingId: SimClustelonrselonmbelonddingId,
    config: SimClustelonrsANNConfig,
    candidatelonScorelonsStat: Int => Unit,
    clustelonrTwelonelontsMap: Map[ClustelonrId, Option[Selonq[(TwelonelontId, Doublelon)]]],
    clustelonrTwelonelontsMapArray: Map[ClustelonrId, Option[Array[(TwelonelontId, Doublelon)]]] = Map.elonmpty
  ): Selonq[ScorelondTwelonelont]
}

objelonct ApproximatelonCosinelonSimilarity elonxtelonnds ApproximatelonCosinelonSimilarity {

  final val InitialCandidatelonMapSizelon = 16384
  val MaxNumRelonsultsUppelonrBound = 1000
  final val MaxTwelonelontCandidatelonAgelonUppelonrBound = 175200

  privatelon class HashMap[A, B](initSizelon: Int) elonxtelonnds mutablelon.HashMap[A, B] {
    ovelonrridelon delonf initialSizelon: Int = initSizelon // 16 - by delonfault
  }

  privatelon delonf parselonTwelonelontId(elonmbelonddingId: SimClustelonrselonmbelonddingId): Option[TwelonelontId] = {
    elonmbelonddingId.intelonrnalId match {
      caselon IntelonrnalId.TwelonelontId(twelonelontId) =>
        Somelon(twelonelontId)
      caselon _ =>
        Nonelon
    }
  }

  ovelonrridelon delonf apply(
    sourcelonelonmbelondding: SimClustelonrselonmbelondding,
    sourcelonelonmbelonddingId: SimClustelonrselonmbelonddingId,
    config: SimClustelonrsANNConfig,
    candidatelonScorelonsStat: Int => Unit,
    clustelonrTwelonelontsMap: Map[ClustelonrId, Option[Selonq[(TwelonelontId, Doublelon)]]] = Map.elonmpty,
    clustelonrTwelonelontsMapArray: Map[ClustelonrId, Option[Array[(TwelonelontId, Doublelon)]]] = Map.elonmpty
  ): Selonq[ScorelondTwelonelont] = {
    val now = Timelon.now
    val elonarlielonstTwelonelontId =
      if (config.maxTwelonelontCandidatelonAgelonHours >= MaxTwelonelontCandidatelonAgelonUppelonrBound)
        0L // Disablelon max twelonelont agelon filtelonr
      elonlselon
        SnowflakelonId.firstIdFor(now - Duration.fromHours(config.maxTwelonelontCandidatelonAgelonHours))
    val latelonstTwelonelontId =
      SnowflakelonId.firstIdFor(now - Duration.fromHours(config.minTwelonelontCandidatelonAgelonHours))

    // Uselon Mutablelon map to optimizelon pelonrformancelon. Thelon melonthod is threlonad-safelon.

    // Selont initial map sizelon to around p75 of map sizelon distribution to avoid too many copying
    // from elonxtelonnding thelon sizelon of thelon mutablelon hashmap
    val candidatelonScorelonsMap =
      nelonw HashMap[TwelonelontId, Doublelon](InitialCandidatelonMapSizelon)
    val candidatelonNormalizationMap =
      nelonw HashMap[TwelonelontId, Doublelon](InitialCandidatelonMapSizelon)

    clustelonrTwelonelontsMap.forelonach {
      caselon (clustelonrId, Somelon(twelonelontScorelons)) if sourcelonelonmbelondding.contains(clustelonrId) =>
        val sourcelonClustelonrScorelon = sourcelonelonmbelondding.gelontOrelonlselon(clustelonrId)

        for (i <- 0 until Math.min(twelonelontScorelons.sizelon, config.maxTopTwelonelontsPelonrClustelonr)) {
          val (twelonelontId, scorelon) = twelonelontScorelons(i)

          if (!parselonTwelonelontId(sourcelonelonmbelonddingId).contains(twelonelontId) &&
            twelonelontId >= elonarlielonstTwelonelontId && twelonelontId <= latelonstTwelonelontId) {
            candidatelonScorelonsMap.put(
              twelonelontId,
              candidatelonScorelonsMap.gelontOrelonlselon(twelonelontId, 0.0) + scorelon * sourcelonClustelonrScorelon)
            candidatelonNormalizationMap
              .put(twelonelontId, candidatelonNormalizationMap.gelontOrelonlselon(twelonelontId, 0.0) + scorelon * scorelon)
          }
        }
      caselon _ => ()
    }

    candidatelonScorelonsStat(candidatelonScorelonsMap.sizelon)

    // Relon-Rank thelon candidatelon by configuration
    val procelonsselondCandidatelonScorelons: Selonq[(TwelonelontId, Doublelon)] = candidatelonScorelonsMap.map {
      caselon (candidatelonId, scorelon) =>
        // elonnablelon Partial Normalization
        val procelonsselondScorelon = {
          // Welon applielond thelon "log" velonrsion of partial normalization whelonn welon rank candidatelons
          // by log cosinelon similarity
          config.annAlgorithm match {
            caselon ScoringAlgorithm.LogCosinelonSimilarity =>
              scorelon / sourcelonelonmbelondding.logNorm / math.log(1 + candidatelonNormalizationMap(candidatelonId))
            caselon ScoringAlgorithm.CosinelonSimilarity =>
              scorelon / sourcelonelonmbelondding.l2norm / math.sqrt(candidatelonNormalizationMap(candidatelonId))
            caselon ScoringAlgorithm.CosinelonSimilarityNoSourcelonelonmbelonddingNormalization =>
              scorelon / math.sqrt(candidatelonNormalizationMap(candidatelonId))
            caselon ScoringAlgorithm.DotProduct => scorelon
          }
        }
        candidatelonId -> procelonsselondScorelon
    }.toSelonq

    procelonsselondCandidatelonScorelons
      .filtelonr(_._2 >= config.minScorelon)
      .sortBy(-_._2)
      .takelon(Math.min(config.maxNumRelonsults, MaxNumRelonsultsUppelonrBound))
  }
}
