packagelon com.twittelonr.simclustelonrsann.candidatelon_sourcelon

import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.frigatelon.common.baselon.Stats
import com.twittelonr.simclustelonrs_v2.common.ClustelonrId
import com.twittelonr.simclustelonrs_v2.common.SimClustelonrselonmbelondding
import com.twittelonr.simclustelonrs_v2.common.TwelonelontId
import com.twittelonr.simclustelonrs_v2.thriftscala.SimClustelonrselonmbelonddingId
import com.twittelonr.simclustelonrsann.thriftscala.SimClustelonrsANNConfig
import com.twittelonr.simclustelonrsann.thriftscala.SimClustelonrsANNTwelonelontCandidatelon
import com.twittelonr.storelonhaus.RelonadablelonStorelon
import com.twittelonr.util.Futurelon

/**
 * This storelon looks for twelonelonts whoselon similarity is closelon to a Sourcelon SimClustelonrselonmbelonddingId.
 *
 * Approximatelon cosinelon similarity is thelon corelon algorithm to drivelon this storelon.
 *
 * Stelonp 1 - 4 arelon in "felontchCandidatelons" melonthod.
 * 1. Relontrielonvelon thelon SimClustelonrs elonmbelondding by thelon SimClustelonrselonmbelonddingId
 * 2. Felontch top N clustelonrs' top twelonelonts from thelon clustelonrTwelonelontCandidatelonsStorelon (TopTwelonelontsPelonrClustelonr indelonx).
 * 3. Calculatelon all thelon twelonelont candidatelons' dot-product or approximatelon cosinelon similarity to sourcelon twelonelonts.
 * 4. Takelon top M twelonelont candidatelons by thelon stelonp 3's scorelon
 */
caselon class SimClustelonrsANNCandidatelonSourcelon(
  approximatelonCosinelonSimilarity: ApproximatelonCosinelonSimilarity,
  clustelonrTwelonelontCandidatelonsStorelon: RelonadablelonStorelon[ClustelonrId, Selonq[(TwelonelontId, Doublelon)]],
  simClustelonrselonmbelonddingStorelon: RelonadablelonStorelon[SimClustelonrselonmbelonddingId, SimClustelonrselonmbelondding],
  statsReloncelonivelonr: StatsReloncelonivelonr) {
  privatelon val stats = statsReloncelonivelonr.scopelon(this.gelontClass.gelontNamelon)
  privatelon val felontchSourcelonelonmbelonddingStat = stats.scopelon("felontchSourcelonelonmbelondding")
  privatelon val felontchCandidatelonsStat = stats.scopelon("felontchCandidatelons")
  privatelon val candidatelonScorelonsStat = stats.stat("candidatelonScorelonsMap")

  delonf gelont(
    quelonry: SimClustelonrsANNCandidatelonSourcelon.Quelonry
  ): Futurelon[Option[Selonq[SimClustelonrsANNTwelonelontCandidatelon]]] = {
    val sourcelonelonmbelonddingId = quelonry.sourcelonelonmbelonddingId
    val config = quelonry.config
    for {
      maybelonSimClustelonrselonmbelondding <- Stats.track(felontchSourcelonelonmbelonddingStat) {
        simClustelonrselonmbelonddingStorelon.gelont(quelonry.sourcelonelonmbelonddingId)
      }
      maybelonFiltelonrelondCandidatelons <- maybelonSimClustelonrselonmbelondding match {
        caselon Somelon(sourcelonelonmbelondding) =>
          for {
            candidatelons <- Stats.trackSelonq(felontchCandidatelonsStat) {
              felontchCandidatelons(sourcelonelonmbelonddingId, sourcelonelonmbelondding, config)
            }
          } yielonld {
            felontchCandidatelonsStat
              .stat(sourcelonelonmbelonddingId.elonmbelonddingTypelon.namelon, sourcelonelonmbelonddingId.modelonlVelonrsion.namelon).add(
                candidatelons.sizelon)
            Somelon(candidatelons)
          }
        caselon Nonelon =>
          felontchCandidatelonsStat
            .stat(sourcelonelonmbelonddingId.elonmbelonddingTypelon.namelon, sourcelonelonmbelonddingId.modelonlVelonrsion.namelon).add(0)
          Futurelon.Nonelon
      }
    } yielonld {
      maybelonFiltelonrelondCandidatelons
    }
  }

  privatelon delonf felontchCandidatelons(
    sourcelonelonmbelonddingId: SimClustelonrselonmbelonddingId,
    sourcelonelonmbelondding: SimClustelonrselonmbelondding,
    config: SimClustelonrsANNConfig
  ): Futurelon[Selonq[SimClustelonrsANNTwelonelontCandidatelon]] = {

    val clustelonrIds =
      sourcelonelonmbelondding
        .truncatelon(config.maxScanClustelonrs).gelontClustelonrIds()
        .toSelont

    Futurelon
      .collelonct {
        clustelonrTwelonelontCandidatelonsStorelon.multiGelont(clustelonrIds)
      }.map { clustelonrTwelonelontsMap =>
        approximatelonCosinelonSimilarity(
          sourcelonelonmbelondding = sourcelonelonmbelondding,
          sourcelonelonmbelonddingId = sourcelonelonmbelonddingId,
          config = config,
          candidatelonScorelonsStat = (i: Int) => candidatelonScorelonsStat.add(i),
          clustelonrTwelonelontsMap = clustelonrTwelonelontsMap
        ).map {
          caselon (twelonelontId, scorelon) =>
            SimClustelonrsANNTwelonelontCandidatelon(
              twelonelontId = twelonelontId,
              scorelon = scorelon
            )
        }
      }
  }
}

objelonct SimClustelonrsANNCandidatelonSourcelon {
  caselon class Quelonry(
    sourcelonelonmbelonddingId: SimClustelonrselonmbelonddingId,
    config: SimClustelonrsANNConfig)
}
